[gd_scene load_steps=9 format=3 uid="uid://b323c518coe4j"]

[ext_resource type="Script" uid="uid://cks58y784hlbw" path="res://Scenes/Enemies/Normal/Grunt.gd" id="1_wh1fe"]
[ext_resource type="Texture2D" uid="uid://bpday23tqwb43" path="res://Sprites/Original Size 1Ñ…/Pallete 1/Skeleton.png" id="2_dkke2"]
[ext_resource type="PackedScene" uid="uid://djrj4w1nryb2t" path="res://Components/NavComponent.tscn" id="3_drosd"]
[ext_resource type="PackedScene" uid="uid://udq0r6fp3mgm" path="res://Components/HealthModule.tscn" id="4_dkke2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qo6so"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oejt3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pc5cf"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dkke2"]
radius = 7.0
height = 20.0

[node name="Grunt" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wh1fe")
speed = 75.0

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="HurtCollision" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource("CircleShape2D_qo6so")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_oejt3")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 6.3108872e-30)
scale = Vector2(0.3, 0.315)
texture = ExtResource("2_dkke2")

[node name="AttackHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource("CircleShape2D_pc5cf")

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[node name="NavComponent" parent="." node_paths=PackedStringArray("click_area") instance=ExtResource("3_drosd")]
click_area = NodePath("ClickBox")

[node name="ClickBox" type="Area2D" parent="NavComponent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavComponent/ClickBox"]
shape = SubResource("CapsuleShape2D_dkke2")

[node name="HealthModule" parent="." instance=ExtResource("4_dkke2")]
maxHealth = 50.0

[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="computed_velocity" from="NavComponent" to="." method="_on_nav_component_computed_velocity"]
